# rustpixiv

./: .env.example  .gitignore  Cargo.toml  README.md
src/: client.rs  constants.rs  enums.rs  errors.rs  illustration.rs  lib.rs  utils.rs
src/pixiv/: client.rs  mod.rs  request.rs  request_builder.rs  user.rs
src/pixiv/arg/: illustration_ranking_request_arg.rs  illustration_search_request_arg.rs  mod.rs  recommended_illustration_request_arg.rs  user_bookmark_tags_illustration_request_arg.rs  user_following_request_arg.rs
src/pixiv/helper_structs/: illustration.rs  illustration_tag.rs  image_url.rs  meta_page.rs  mod.rs  series.rs  single_page_meta.rs  tag.rs
src/pixiv/helper_structs/illustration/: comment.rs  illustration.rs  illustration_bookmark_info.rs  illustration_bookmark_info_proxy.rs  illustration_comment.rs  illustration_proxy.rs  illustration_ranking.rs  illustration_search_param.rs  illustration_search_proxy.rs  illustration_tag.rs  meta_page.rs  mod.rs  recommended_illustration.rs  related_illustration_search_proxy.rs  req_illust_ranking_arg.rs  req_rec_illust_arg.rs  req_rec_illust_builder.rs  series.rs  single_page_meta.rs  trending_illustrations.rs
src/pixiv/illustration/: illustration.rs  illustration_search_param.rs  mod.rs  single_page_meta.rs
src/pixiv/result/: illustration_bookmark_info_proxy.rs  illustration_comment.rs  illustration_proxy.rs  illustration_ranking.rs  illustration_search_proxy.rs  mod.rs  recommended_illustration.rs  related_illustration_search_proxy.rs  trending_illustrations.rs
tests/: illustration_test.rs  into_iterator_test.rs  pixiv_client.rs  pixiv_client_test.rs
