[package]
name = "pixieve-rs"
version = "0.3.0"
edition = "2018"
description = "Unofficial fork of an unofficial rust library for the Pixiv API."
keywords = ["pixiv", "pixiv-api", "cute"]
repository = "https://github.com/hbina/rustpixiv"
authors = ["Allen Bui <allenbui94@gmail.com>", "Hanif Bin Ariffin hanif.ariffin.4326@gmail.com"]
license = "MIT"

[dependencies]
reqwest = { version = "0.9" }
bytes = "0.4"
http = "0.1"
serde = "1"
serde_json = "1.0.11"
serde_urlencoded = "0.5"
chrono = "0.4"
log = "0.3"
dotenv = "0.15.0"
md5 = "0.7.0"
url = "2.1.1"