lib = {}

[package]
authors = ["Allen Bui <allenbui94@gmail.com>", "Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
description = "Unofficial fork of an unofficial rust library for the Pixiv API."
edition = "2018"
keywords = ["cute", "pixiv", "pixiv-api"]
license = "MIT"
name = "pixieve-rs"
repository = "https://github.com/hbina/rustpixiv"
version = "0.3.1"

[dependencies]
bytes = "0.4"
chrono = "0.4"
dotenv = "0.15.0"
http = "0.1"
log = "0.3"
md5 = "0.7.0"
reqwest = { version = "0.9" }
serde = "1"
serde_json = "1.0.11"
serde_urlencoded = "0.5"
url = "2.1.1"
