[package]
authors = ["Allen Bui <allenbui94@gmail.com>", "Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>", "Kaito Fujinuma <fujinumakaito@gmail.com>"]
description = "Unofficial fork of an unofficial rust library for the Pixiv API."
edition = "2021"
keywords = ["cute", "pixiv", "pixiv-api"]
license = "MIT"
name = "pixieve-rs"
repository = "https://github.com/minato8080/rustpixiv"
version = "0.5.0"

[dependencies]
bytes = "1.10.1"
chrono = "0.4.40"
dotenv = "0.15.0"
http = "1.3.1"
log = "0.4.27"
md5 = "0.7.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
url = "2.5.4"
